k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      serviceAccountName: demo-app
      containers:
        - name: demo
          image: nginx
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  # これがService名
  name: demo-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: demo  # ← Deploymentのlabels.appと一致
  ports:
  - port: 80
    targetPort: 80
