k8s/manifests/load-balancer.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: demo
  annotations:
    networking.gke.io/load-balancer-ip: "projects/my-website-464008/global/addresses/gkegw1-xmf2-default-demo-9xzqv0opo9r3"
    networking.gke.io/ssl-certificates: "demo-certificate"
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Same

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-service
spec:
  parentRefs:
  - name: demo
    sectionName: https  # HTTPSリスナーも参照
  hostnames:
  - "www.arakey.dev"
  rules:
  - backendRefs:
    - name: demo-service # Service名
      port: 443
